--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -264,6 +264,11 @@
         /* background: blue; */
         height: 450px;
     }
+
+    .tech-icon {
+        height: 40px;
+        width: 40px;
+    }
 }
 
 
@@ -401,20 +406,36 @@
     .p-builtwith {
         height: 100px;
     }
+    .tech-icon {
+        height: 40px;
+        width: 40px;
+    }
 }
 
 
 @media screen and (min-width: 1900px){
     .projects-div {
-        height: 1000px;
+        height: 1200px;
+        border-radius: 50px;
+    }
+
+    .projects-title {
+        height: 300px;
+    }
+
+    .projects-title > h1 {
+        font-size: calc(50px + (100 - 50) * ((100vw - 300px) / (2000 - 300)));
+    }
+    .projects-title > h2 {
+        font-size: calc(40px + (60 - 40) * ((100vw - 300px) / (2000 - 300)));
+        font-weight: 500;
     }
     
     .project-card {
-        height: 800px;
-        /* background: green; */
+        height: 1000px;
     }
     .projects-carousel {
-        height: 100px;
+        height: 150px;
     }
     
     .pc-real {
@@ -423,32 +444,40 @@
     .projects {
         height: 1800px;
     }
-    .project-buttons > button > h1 {
-        font-size: 35px;
+    .project-buttons > button > a > h1 {
+        font-size: 40px;
+    }
+    .project-buttons > button > a > svg {
+        height: 40px;
+        width: 40px;
+        margin-right: 10px;
     }
 
-    .p-bw-bottom > h1 {
-        font-size: 38px;
+    .view-code > a > svg {
+        width: 50px !important;
+        height: 50px !important;
     }
+
 
     .p-bw-top > h1 {
-        font-size: 45px;
+        font-size: 50px;
     }
     .p-info > p {
-        font-size: 45px;
+        font-size: 50px;
     }
     .p-info > h1 {
-        font-size: 60px;
+        font-size: 70px;
     }
 
     .project-image {
         margin-right: 70px;
-        height: 90%;
+        height: 80%;
     }
 
     .tech-icon {
-        height: 60px;
-        width: 60px;
+        height: 80px;
+        width: 80px;
+        margin-right: 30px;
     }
 
     .project-buttons  {
@@ -457,6 +486,7 @@
     }
 
     .project-option > h1 {
-        font-size: 40px;
+        font-size: 50px;
+        margin-top: 100px;
     }
 }
