--- a/src/Components/ResumeCTA/resumecta.css
+++ b/src/Components/ResumeCTA/resumecta.css
@@ -1,6 +1,33 @@
 .resume-cta {
-    background:red;
-    height: 70px;
+    background:#FD4805;
+    height: 60px;
     width: 100%;
     margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume-cta > a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+.resume-cta > a > h1 {
+    font-size: 30px;
+    color: #f5f5f5;
+}
+
+@media screen and (min-width: 1900px){
+    .resume-cta {
+        margin-top: 150px;
+        height: 100px;
+    }
+    .resume-cta > a > h1 {
+        font-size: 50px;
+        color: #f5f5f5;
+    }
 }
