--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     height: 70px;
     width: 100%;
-    background: black;
+    background: #1C1C1C;
     display: flex;
     justify-content: center;
     position: fixed;
